@@ -90,6 +90,11 @@
             "visits_decls" : true
         },
         {
+            "name"  : "overloaded-signal",
+            "level" : 0,
+            "visits_decls" : true
+        },
+        {
             "name"  : "connect-by-name",
             "level" : 0,
             "categories" : ["bug", "readability"],
